# iris

./: .env.example  .gitignore  COMPLIANCE.md  CONTRIBUTING.md  README.md  iris-usage.json  pyproject.toml
docs/: PUBLISHING-SETUP.md
examples/: iris-reminders.service  iris-reminders.timer  iris.service  mcp.example.json  persona.example.md  persona.neph.md  standing-orders.example.md
iris/: __init__.py  __main__.py  advisories.py  agent.py  approvals.py  attachments.py  audit.py  autoresume.py  backup.py  briefing.py  budget.py  buffer.py  cli.py  commands.py  config.py  connections.py  conversation.py  cron.py  digest.py  discord_adapter.py  driver.py  footer.py  gating.py  goals.py  heartbeat.py  inbox.py  jobs.py  jobs_console.py  jobs_tui.py  leash.py  mcp_catalog.py  mcp_probe.py  memory.py  metrics.py  proactive.py  prompt_size.py  recap.py  reminders.py  router.py  schedules.py  (+17 more)
scripts/: mint_youtube_token.py
tests/: fakes.py  test_advisories.py  test_agent.py  test_approvals.py  test_approvals_server.py  test_attachments.py  test_audit.py  test_autoresume.py  test_backup.py  test_briefing.py  test_budget.py  test_budget_wiring.py  test_buffer.py  test_cli.py  test_commands.py  test_config.py  test_connections.py  test_conversation.py  test_cron.py  test_digest.py  test_discord.py  test_discord_server.py  test_driver.py  test_footer.py  test_gating.py  test_goals.py  test_goals_server.py  test_golden.py  test_heartbeat.py  test_inbox.py  test_jobs.py  test_jobs_console.py  test_jobs_driver.py  test_jobs_runner.py  test_jobs_server.py  test_jobs_store.py  (+49 more)
(+52 files in other folders)
